Switch to AMQP, other minor changes

--- a/production.ini
+++ b/production.ini
@@ -30,14 +30,14 @@ port = 6543
 keys = root, ingestion, sqlalchemy
 
 [handlers]
-keys = console
+keys = console, filelog
 
 [formatters]
 keys = generic
 
 [logger_root]
 level = WARN
-handlers = console
+handlers = filelog
 
 [logger_ingestion]
 level = WARN
@@ -46,7 +46,7 @@ qualname = ingestion
 
 [logger_sqlalchemy]
 level = WARN
-handlers =
+handlers = 
 qualname = sqlalchemy.engine
 # "level = INFO" logs SQL queries.
 # "level = DEBUG" logs SQL queries and results.
@@ -56,6 +56,12 @@ qualname = sqlalchemy.engine
 class = StreamHandler
 args = (sys.stderr,)
 level = NOTSET
+formatter = generic
+
+[handler_filelog]
+class = FileHandler
+args = ('%(here)s/../var/ingestion.log', 'a')
+level = INFO
 formatter = generic
 
 [formatter_generic]
